syntax = "proto2";

package rpc;

service Coordinator {
  rpc Check (CheckRequest) returns (CheckResponse) {}
  rpc Submit (SubmitRequest) returns (SubmitResponse) {}
  rpc Trace (TraceRequest) returns (TraceResponse) {}
}

message SubmitRequest {
  required string sql = 1;
  map<string, Parameter> variables = 2;
}

message Parameter {
  required bool is_null = 1;
  oneof any {
    bool bool = 2;
    int64 i64 = 3;
    double f64 = 4;
    int32 date = 5;
    int64 timestamp = 6;
    string string = 7;
  }
}

message SubmitResponse {
  required int64 txn = 1;
  repeated TraceRequest trace = 2;
  required bytes record_batch = 3;
}

message TraceRequest {
  required int64 txn = 1;
  required int32 stage = 2;
  required int32 worker = 3;
  repeated TraceEvent events = 4;
}

message TraceEvent {
  required string name = 1;
  required uint64 begin = 2;
  required uint64 end = 3;
}

message TraceResponse {}

service Worker {
  rpc Check (CheckRequest) returns (CheckResponse) {}
  rpc Broadcast (BroadcastRequest) returns (stream Page) {}
  rpc Exchange (ExchangeRequest) returns (stream Page) {}
  rpc ApproxCardinality (ApproxCardinalityRequest) returns (ApproxCardinalityResponse) {}
  rpc ColumnStatistics (ColumnStatisticsRequest) returns (ColumnStatisticsResponse) {}
}

message CheckRequest {}
message CheckResponse {}

message BroadcastRequest {
  required int64 txn = 1;
  required int32 stage = 2;
  required bytes expr = 3;
  required int32 listeners = 4;
}

message ExchangeRequest {
  required int64 txn = 1;
  required int32 stage = 2;
  required bytes expr = 3;
  required int32 listeners = 4;
  required string hash_column = 5;
  required int32 hash_bucket = 6;
}

message Page {
  oneof part {
    bytes record_batch = 1;
    string error = 2;
  }
}

message ApproxCardinalityRequest {
  required int64 table_id = 1;
}

message ApproxCardinalityResponse {
  required double cardinality = 1;
}

message ColumnStatisticsRequest {
  required int64 table_id = 1;
  required string column_name = 2;
}

message ColumnStatisticsResponse {
  optional bytes statistics = 1;
}